deps/zarrs_jl/zarrs_jl.h

typedef struct IcStorageHandle IcStorageHandle;
typedef struct IcRepoHandle IcRepoHandle;
typedef struct IcSessionHandle IcSessionHandle;
enum ZarrsResult {
  ZARRS_SUCCESS = 0,
  ZARRS_ERROR_NULL_PTR = -1,
  ZARRS_ERROR_STORAGE = -2,
  ZARRS_ERROR_ARRAY = -3,
  ZARRS_ERROR_BUFFER_LENGTH = -4,
  ZARRS_ERROR_INVALID_INDICES = -5,
  ZARRS_ERROR_NODE_PATH = -6,
  ZARRS_ERROR_STORE_PREFIX = -7,
  ZARRS_ERROR_INVALID_METADATA = -8,
  ZARRS_ERROR_STORAGE_CAPABILITY = -9,
  ZARRS_ERROR_UNKNOWN_CHUNK_GRID_SHAPE = -10,
  ZARRS_ERROR_UNKNOWN_INTERSECTING_CHUNKS = -11,
  ZARRS_ERROR_UNSUPPORTED_DATA_TYPE = -12,
  ZARRS_ERROR_GROUP = -13,
  ZARRS_ERROR_INCOMPATIBLE_DIMENSIONALITY = -14,
};
typedef int32_t ZarrsResult;
void zarrsFreeString(char *s);
ZarrsResult zarrsIcechunkS3Storage(const char *bucket,
                                   const char *prefix,
                                   const char *region,
                                   int32_t anonymous,
                                   const char *endpoint_url,
                                   int32_t allow_http,
                                   const char *access_key_id,
                                   const char *secret_access_key,
                                   const char *session_token,
                                   IcStorageHandle **pHandle);
ZarrsResult zarrsIcechunkGcsStorage(const char *bucket,
                                    const char *prefix,
                                    int32_t credential_type,
                                    const char *credential_value,
                                    IcStorageHandle **pHandle);
ZarrsResult zarrsIcechunkAzureStorage(const char *account,
                                      const char *container,
                                      const char *prefix,
                                      int32_t credential_type,
                                      const char *credential_value,
                                      IcStorageHandle **pHandle);
ZarrsResult zarrsIcechunkLocalStorage(const char *path, IcStorageHandle **pHandle);
ZarrsResult zarrsIcechunkMemoryStorage(IcStorageHandle **pHandle);
ZarrsResult zarrsIcechunkDestroyStorage(IcStorageHandle *handle);
ZarrsResult zarrsIcechunkRepoOpen(IcStorageHandle *ic_storage, IcRepoHandle **pRepo);
ZarrsResult zarrsIcechunkRepoCreate(IcStorageHandle *ic_storage, IcRepoHandle **pRepo);
ZarrsResult zarrsIcechunkRepoOpenOrCreate(IcStorageHandle *ic_storage, IcRepoHandle **pRepo);
ZarrsResult zarrsIcechunkDestroyRepo(IcRepoHandle *repo);
ZarrsResult zarrsIcechunkRepoListBranches(IcRepoHandle *repo, char **pJson);
ZarrsResult zarrsIcechunkRepoListTags(IcRepoHandle *repo, char **pJson);
ZarrsResult zarrsIcechunkRepoCreateBranch(IcRepoHandle *repo,
                                          const char *name,
                                          const char *snapshot_id_str,
                                          char **pResult);
ZarrsResult zarrsIcechunkRepoDeleteBranch(IcRepoHandle *repo, const char *name);
ZarrsResult zarrsIcechunkRepoCreateTag(IcRepoHandle *repo,
                                       const char *name,
                                       const char *snapshot_id_str,
                                       char **pResult);
ZarrsResult zarrsIcechunkRepoDeleteTag(IcRepoHandle *repo, const char *name);
ZarrsResult zarrsIcechunkRepoLookupBranch(IcRepoHandle *repo, const char *name, char **pSnapshotId);
ZarrsResult zarrsIcechunkRepoLookupTag(IcRepoHandle *repo, const char *name, char **pSnapshotId);
/**
 * Create a readonly session.
 * `version_type`: 0 = branch, 1 = tag, 2 = snapshot_id
 * `version_value`: the branch name, tag name, or snapshot ID string
 */
ZarrsResult zarrsIcechunkReadonlySession(IcRepoHandle *repo,
                                         int32_t version_type,
                                         const char *version_value,
                                         IcSessionHandle **pSession);