src/libzarrs_api.jl


### Prototype
```c
ZarrsResult zarrsIcechunkS3Storage(const char *bucket, const char *prefix, const char *region, int32_t anonymous, const char *endpoint_url, int32_t allow_http, const char *access_key_id, const char *secret_access_key, const char *session_token, IcStorageHandle **pHandle);
```
"""
function zarrs_icechunk_s3_storage(
    bucket,
    prefix,
    region,
    anonymous,
    endpoint_url,
    allow_http,
    access_key_id,
    secret_access_key,
    session_token,
)
    _handle_ptr = Ref{Ptr{Cvoid}}(C_NULL)
    _result = ccall(
        (:zarrsIcechunkS3Storage, libzarrs_jl),
        ZarrsResult,
        (
            Cstring,
            Cstring,
            Cstring,
            Int32,
            Cstring,
            Int32,
            Cstring,
            Cstring,
            Cstring,
            Ptr{Ptr{IcStorageHandle}},
        ),
        bucket,
        prefix,
        region,
        anonymous,
        endpoint_url,
        allow_http,
        access_key_id,
        secret_access_key,
        session_token,
        _handle_ptr,
    )
    check_error(_result)
    return _handle_ptr[]
end

"""
    zarrs_icechunk_gcs_storage(bucket, prefix, credential_type, credential_value)

### Prototype
```c
ZarrsResult zarrsIcechunkGcsStorage(const char *bucket, const char *prefix, int32_t credential_type, const char *credential_value, IcStorageHandle **pHandle);
```
"""
function zarrs_icechunk_gcs_storage(bucket, prefix, credential_type, credential_value)
    _handle_ptr = Ref{Ptr{Cvoid}}(C_NULL)
    _result = ccall(
        (:zarrsIcechunkGcsStorage, libzarrs_jl),
        ZarrsResult,
        (Cstring, Cstring, Int32, Cstring, Ptr{Ptr{IcStorageHandle}}),
        bucket,
        prefix,
        credential_type,
        credential_value,
        _handle_ptr,
    )
    check_error(_result)
    return _handle_ptr[]
end

"""
    zarrs_icechunk_azure_storage(account, container, prefix, credential_type, credential_value)

### Prototype
```c
ZarrsResult zarrsIcechunkAzureStorage(const char *account, const char *container, const char *prefix, int32_t credential_type, const char *credential_value, IcStorageHandle **pHandle);
```
"""
function zarrs_icechunk_azure_storage(
    account,
    container,
    prefix,
    credential_type,
    credential_value,
)
    _handle_ptr = Ref{Ptr{Cvoid}}(C_NULL)
    _result = ccall(
        (:zarrsIcechunkAzureStorage, libzarrs_jl),
        ZarrsResult,
        (Cstring, Cstring, Cstring, Int32, Cstring, Ptr{Ptr{IcStorageHandle}}),
        account,
        container,
        prefix,
        credential_type,
        credential_value,
        _handle_ptr,
    )
    check_error(_result)
    return _handle_ptr[]
end

"""
    zarrs_icechunk_local_storage(path)

### Prototype
```c
ZarrsResult zarrsIcechunkLocalStorage(const char *path, IcStorageHandle **pHandle);
```
"""
function zarrs_icechunk_local_storage(path)
    _handle_ptr = Ref{Ptr{Cvoid}}(C_NULL)
    _result = ccall(
        (:zarrsIcechunkLocalStorage, libzarrs_jl),
        ZarrsResult,
        (Cstring, Ptr{Ptr{IcStorageHandle}}),
        path,
        _handle_ptr,
    )
    check_error(_result)
    return _handle_ptr[]
end

"""
    zarrs_icechunk_memory_storage()

### Prototype
```c
ZarrsResult zarrsIcechunkMemoryStorage(IcStorageHandle **pHandle);
```
"""
function zarrs_icechunk_memory_storage()
    _handle_ptr = Ref{Ptr{Cvoid}}(C_NULL)
    _result = ccall(
        (:zarrsIcechunkMemoryStorage, libzarrs_jl),
        ZarrsResult,
        (Ptr{Ptr{IcStorageHandle}},),
        _handle_ptr,
    )
    check_error(_result)
    return _handle_ptr[]
end

"""
    zarrs_icechunk_destroy_storage(handle)

### Prototype
```c
ZarrsResult zarrsIcechunkDestroyStorage(IcStorageHandle *handle);
```
"""
function zarrs_icechunk_destroy_storage(handle)
    _result = ccall(
        (:zarrsIcechunkDestroyStorage, libzarrs_jl),
        ZarrsResult,
        (Ptr{IcStorageHandle},),
        handle,
    )
    check_error(_result)
end

"""
    zarrs_icechunk_repo_open(ic_storage)

### Prototype
```c
ZarrsResult zarrsIcechunkRepoOpen(IcStorageHandle *ic_storage, IcRepoHandle **pRepo);
```
"""
function zarrs_icechunk_repo_open(ic_storage)
    _handle_ptr = Ref{Ptr{Cvoid}}(C_NULL)
    _result = ccall(
        (:zarrsIcechunkRepoOpen, libzarrs_jl),
        ZarrsResult,
        (Ptr{IcStorageHandle}, Ptr{Ptr{IcRepoHandle}}),
        ic_storage,
        _handle_ptr,
    )
    check_error(_result)
    return _handle_ptr[]
end

"""
    zarrs_icechunk_repo_create(ic_storage)

### Prototype
```c
ZarrsResult zarrsIcechunkRepoCreate(IcStorageHandle *ic_storage, IcRepoHandle **pRepo);
```
"""
function zarrs_icechunk_repo_create(ic_storage)
    _handle_ptr = Ref{Ptr{Cvoid}}(C_NULL)
    _result = ccall(
        (:zarrsIcechunkRepoCreate, libzarrs_jl),
        ZarrsResult,
        (Ptr{IcStorageHandle}, Ptr{Ptr{IcRepoHandle}}),
        ic_storage,
        _handle_ptr,
    )
    check_error(_result)
    return _handle_ptr[]
end

"""
    zarrs_icechunk_repo_open_or_create(ic_storage)

### Prototype
```c
ZarrsResult zarrsIcechunkRepoOpenOrCreate(IcStorageHandle *ic_storage, IcRepoHandle **pRepo);
```
"""
function zarrs_icechunk_repo_open_or_create(ic_storage)
    _handle_ptr = Ref{Ptr{Cvoid}}(C_NULL)
    _result = ccall(
        (:zarrsIcechunkRepoOpenOrCreate, libzarrs_jl),
        ZarrsResult,
        (Ptr{IcStorageHandle}, Ptr{Ptr{IcRepoHandle}}),
        ic_storage,
        _handle_ptr,
    )
    check_error(_result)
    return _handle_ptr[]
end

"""
    zarrs_icechunk_destroy_repo(repo)

### Prototype
```c
ZarrsResult zarrsIcechunkDestroyRepo(IcRepoHandle *repo);
```
"""
function zarrs_icechunk_destroy_repo(repo)
    _result = ccall(
        (:zarrsIcechunkDestroyRepo, libzarrs_jl),
        ZarrsResult,
        (Ptr{IcRepoHandle},),
        repo,
    )
    check_error(_result)
end

"""
    zarrs_icechunk_repo_list_branches(repo)

### Prototype
```c
ZarrsResult zarrsIcechunkRepoListBranches(IcRepoHandle *repo, char **pJson);
```
"""
function zarrs_icechunk_repo_list_branches(repo)
    _str_ptr = Ref{Cstring}(C_NULL)
    _result = ccall(
        (:zarrsIcechunkRepoListBranches, libzarrs_jl),
        ZarrsResult,
        (Ptr{IcRepoHandle}, Ptr{Cstring}),
        repo,
        _str_ptr,
    )
    check_error(_result)
    if _str_ptr[] == C_NULL
        return nothing
    end
    _s = unsafe_string(_str_ptr[])
    ccall((:zarrsFreeString, libzarrs_jl), Cvoid, (Cstring,), _str_ptr[])
    return _s
end

"""
    zarrs_icechunk_repo_list_tags(repo)

### Prototype
```c
ZarrsResult zarrsIcechunkRepoListTags(IcRepoHandle *repo, char **pJson);
```
"""
function zarrs_icechunk_repo_list_tags(repo)
    _str_ptr = Ref{Cstring}(C_NULL)
    _result = ccall(
        (:zarrsIcechunkRepoListTags, libzarrs_jl),
        ZarrsResult,
        (Ptr{IcRepoHandle}, Ptr{Cstring}),
        repo,
        _str_ptr,
    )
    check_error(_result)
    if _str_ptr[] == C_NULL
        return nothing
    end
    _s = unsafe_string(_str_ptr[])
    ccall((:zarrsFreeString, libzarrs_jl), Cvoid, (Cstring,), _str_ptr[])
    return _s
end

"""
    zarrs_icechunk_repo_create_branch(repo, name, snapshot_id_str)

### Prototype
```c
ZarrsResult zarrsIcechunkRepoCreateBranch(IcRepoHandle *repo, const char *name, const char *snapshot_id_str, char **pResult);
```
"""
function zarrs_icechunk_repo_create_branch(repo, name, snapshot_id_str)
    _str_ptr = Ref{Cstring}(C_NULL)
    _result = ccall(
        (:zarrsIcechunkRepoCreateBranch, libzarrs_jl),
        ZarrsResult,
        (Ptr{IcRepoHandle}, Cstring, Cstring, Ptr{Cstring}),
        repo,
        name,
        snapshot_id_str,
        _str_ptr,
    )
    check_error(_result)
    if _str_ptr[] == C_NULL
        return nothing
    end
    _s = unsafe_string(_str_ptr[])
    ccall((:zarrsFreeString, libzarrs_jl), Cvoid, (Cstring,), _str_ptr[])
    return _s
end

"""
    zarrs_icechunk_repo_delete_branch(repo, name)

### Prototype
```c
ZarrsResult zarrsIcechunkRepoDeleteBranch(IcRepoHandle *repo, const char *name);
```
"""
function zarrs_icechunk_repo_delete_branch(repo, name)
    _result = ccall(
        (:zarrsIcechunkRepoDeleteBranch, libzarrs_jl),
        ZarrsResult,
        (Ptr{IcRepoHandle}, Cstring),
        repo,
        name,
    )
    check_error(_result)
end

"""
    zarrs_icechunk_repo_create_tag(repo, name, snapshot_id_str)

### Prototype
```c
ZarrsResult zarrsIcechunkRepoCreateTag(IcRepoHandle *repo, const char *name, const char *snapshot_id_str, char **pResult);
```
"""
function zarrs_icechunk_repo_create_tag(repo, name, snapshot_id_str)
    _str_ptr = Ref{Cstring}(C_NULL)
    _result = ccall(
        (:zarrsIcechunkRepoCreateTag, libzarrs_jl),
        ZarrsResult,
        (Ptr{IcRepoHandle}, Cstring, Cstring, Ptr{Cstring}),
        repo,
        name,
        snapshot_id_str,
        _str_ptr,
    )
    check_error(_result)
    if _str_ptr[] == C_NULL
        return nothing
    end
    _s = unsafe_string(_str_ptr[])
    ccall((:zarrsFreeString, libzarrs_jl), Cvoid, (Cstring,), _str_ptr[])
    return _s
end

"""
    zarrs_icechunk_repo_delete_tag(repo, name)

### Prototype
```c
ZarrsResult zarrsIcechunkRepoDeleteTag(IcRepoHandle *repo, const char *name);
```
"""
function zarrs_icechunk_repo_delete_tag(repo, name)
    _result = ccall(
        (:zarrsIcechunkRepoDeleteTag, libzarrs_jl),
        ZarrsResult,
        (Ptr{IcRepoHandle}, Cstring),
        repo,
        name,
    )
    check_error(_result)
end

"""
    zarrs_icechunk_repo_lookup_branch(repo, name)

### Prototype
```c
ZarrsResult zarrsIcechunkRepoLookupBranch(IcRepoHandle *repo, const char *name, char **pSnapshotId);
```
"""
function zarrs_icechunk_repo_lookup_branch(repo, name)
    _str_ptr = Ref{Cstring}(C_NULL)
    _result = ccall(
        (:zarrsIcechunkRepoLookupBranch, libzarrs_jl),
        ZarrsResult,
        (Ptr{IcRepoHandle}, Cstring, Ptr{Cstring}),
        repo,
        name,
        _str_ptr,
    )
    check_error(_result)
    if _str_ptr[] == C_NULL
        return nothing
    end
    _s = unsafe_string(_str_ptr[])
    ccall((:zarrsFreeString, libzarrs_jl), Cvoid, (Cstring,), _str_ptr[])
    return _s
end

"""
    zarrs_icechunk_repo_lookup_tag(repo, name)

### Prototype
```c
ZarrsResult zarrsIcechunkRepoLookupTag(IcRepoHandle *repo, const char *name, char **pSnapshotId);
```
"""
function zarrs_icechunk_repo_lookup_tag(repo, name)
    _str_ptr = Ref{Cstring}(C_NULL)
    _result = ccall(
        (:zarrsIcechunkRepoLookupTag, libzarrs_jl),
        ZarrsResult,
        (Ptr{IcRepoHandle}, Cstring, Ptr{Cstring}),
        repo,
        name,
        _str_ptr,
    )
    check_error(_result)
    if _str_ptr[] == C_NULL
        return nothing
    end
    _s = unsafe_string(_str_ptr[])
    ccall((:zarrsFreeString, libzarrs_jl), Cvoid, (Cstring,), _str_ptr[])
    return _s
end

"""
    zarrs_icechunk_readonly_session(repo, version_type, version_value)

Create a readonly session. `version_type`: 0 = branch, 1 = tag, 2 = snapshot\\_id `version_value`: the branch name, tag name, or snapshot ID string

### Prototype
```c
ZarrsResult zarrsIcechunkReadonlySession(IcRepoHandle *repo, int32_t version_type, const char *version_value, IcSessionHandle **pSession);
```
"""
function zarrs_icechunk_readonly_session(repo, version_type, version_value)
    _handle_ptr = Ref{Ptr{Cvoid}}(C_NULL)
    _result = ccall(
        (:zarrsIcechunkReadonlySession, libzarrs_jl),
        ZarrsResult,
        (Ptr{IcRepoHandle}, Int32, Cstring, Ptr{Ptr{IcSessionHandle}}),
        repo,
        version_type,
        version_value,
        _handle_ptr,
    )
    check_error(_result)
    return _handle_ptr[]
end

"""
    zarrs_icechunk_writable_session(repo, branch)

Create a writable session on a branch.
